# opnsense_api

./: README.md  pyproject.toml  requirements.txt  test_suite.py
.github/: publish.yml
.github/workflows/: ci.yml
docs/: config_xml_structure.md  yaml_state_format.md
examples/: desired_state_example.py  firewall_filter_crud.py  haproxy_example.py  kea_dhcpv4_example.py  unbound_example.py
opnsense_api/: __init__.py  authentik.py  base_client.py  client.py  pysense.py
opnsense_api/api/: acmeclient.py  acmeclient_accounts_client.py  acmeclient_certificates_client.py  acmeclient_validations_client.py  auth_group_client.py  auth_user_client.py  core_backup_client.py  core_firmware_client.py  firewall_alias_client.py  firewall_category_client.py  firewall_dnat_client.py  firewall_filter_client.py  firewall_one_to_one_client.py  firewall_snat_client.py  haproxy.py  haproxy_authentik.py  haproxy_export_client.py  haproxy_service_client.py  haproxy_settings_client.py  helper.py  kea_dhcpv4_client.py  (+7 more)
tests/: test_core_backup.py  test_firewall_filter.py  test_firewall_one_to_one.py  test_firewall_snat.py  test_helper.py  test_interface_overview.py  test_kea_dhcpv4.py  test_model_serialization.py  test_pydantic_acl.py  test_pydantic_acmeclient.py  test_pydantic_action.py  test_pydantic_action_order.py  test_pydantic_alias.py  test_pydantic_auth.py  test_pydantic_backend.py  test_pydantic_cert.py  test_pydantic_frontend.py  test_pydantic_group.py  test_pydantic_model_generator.py  test_pydantic_server.py  test_rule_model_issues.py  test_state_manager.py  test_unbound.py
(+57 files in other folders)
