[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "opnsense-api"
dynamic = ["version"]
description = "OPNsense Python API bindings"
requires-python = ">=3.10"
authors = [{ name = "Park0 Janssen" }]
dependencies = [
    "pydantic",
    "truststore>=0.8.0",
    "requests>=2.0.0",
    "pyyaml>=6.0.2",
]

[project.urls]
Homepage = "https://github.com/park0/opnsense-api"
Repository = "https://github.com/park0/opnsense-api"

[project.optional-dependencies]
authentik = ["authentik-client"]
cli = ["opnsense-api[authentik]"]
dev = ["coverage", "lxml", "jinja2"]

[project.scripts]
opn = "opnsense_api.pysense:main"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["opnsense_api*"]
exclude = ["tests*", "opn_pydantic_generator*"]
